[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--verbose"
python_files = "*_test.py"
norecursedirs = ["env", "proposals"]

[tool.pylint.MASTER]
ignore-paths = [
  '^tfx_addons/predictions_to_bigquery/.*.py$',
]
